--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             <div>
                                 <span class="projects__subtitle">Web</span>
                                 <h3 class="projects__title">My Portfolio website</h3>
-                                <a href="https://sanketjagtap15.github.io/SJsquare/" target="_blank"
+                                <a href="https://youssef123698745.github.io/Portfolio/" target="_blank"
                                     class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                 </a>
@@ -173,7 +173,7 @@
                         <div class="projects__modal">
                             <div>
                                 <span class="projects__subtitle">Design</span>
-                                <h3 class="projects__title">Advanced CSS Hover Effects</h3>
+                                <h3 class="projects__title">Water Website</h3>
                                 <a href="https://sanketjagtap15.github.io/hover-effect/" target="_blank"
                                     class="projects__button button button__small">
                                     <i class="ri-link"></i>
