--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                             <div>
                                 <span class="projects__subtitle">Design</span>
                                 <h3 class="projects__title">Water Website</h3>
-                                <a href="https://sanketjagtap15.github.io/hover-effect/" target="_blank"
+                                <a href="index.html" target="_blank"
                                     class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                 </a>
