--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
             <div class="profile__buttons">
                 <!-- Insert your CV -->
-                <a download="" href="#" class="button">
+                <a href="#" class="button">
                     Download CV <i class="ri-download-line"></i>
                 </a>
 
