--- a/index.html
+++ b/index.html
@@ -121,6 +121,23 @@
             <div class="filters__sections">
                 <!--=============== PROJECTS ===============-->
                 <div class="projects__content grid " data-content id="projects">
+                    
+                    <article class="projects__card">
+                        <!-- Insert your image in a rectangular format (Ex: 600 x 400, 1000 x 800, 1200 x 1000, etc) -->
+                        <img src="assets/img/ecommerce.png" alt="" class="projects__img">
+
+                        <div class="projects__modal">
+                            <div>
+                                <span class="projects__subtitle">Web</span>
+                                <h3 class="projects__title">Ecommerce Website</h3>
+                                <a href="https://youssef123698745.github.io/Ecommerce/" target="_blank"
+                                    class="projects__button button button__small">
+                                    <i class="ri-link"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </article>
+                    
                     <article class="projects__card">
                         <!-- Insert your image in a rectangular format (Ex: 600 x 400, 1000 x 800, 1200 x 1000, etc) -->
                         <img src="assets/img/informal.png" alt="" class="projects__img">
