--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     
                     <article class="projects__card">
                         <!-- Insert your image in a rectangular format (Ex: 600 x 400, 1000 x 800, 1200 x 1000, etc) -->
-                        <img src="https://youssef123698745.github.io/Portfolio/assets/img/ecommerce.png" alt="" class="projects__img">
+                        <img src="assets/img/ecommerce.png" alt="" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
