--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     </article>
 
                     <article class="projects__card">
-                        <img src="assets/img/ecommerce.png" alt="" class="projects__img">
+                        <img src="assets/img/alfihriya.png" alt="" class="projects__img">
 
                         <div class="projects__modal">
                             <div>
