--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
             <div class="profile__info grid">
                 <div class="profile__info-group">
-                    <h3 class="profile__info-number">1</h3>
+                    <h3 class="profile__info-number">+3</h3>
                     <p class="profile__info-description">
                         Year of <br> work
                     </p>
